--- a/Pokka/Develop/style.css
+++ b/Pokka/Develop/style.css
@@ -63,9 +63,18 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  text-align: center;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.container {
+  align-content: center;
+}
+
+.col {
+  
 }
