--- a/Pokka/Develop/style.css
+++ b/Pokka/Develop/style.css
@@ -21,8 +21,14 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
+  background-color: aquamarine;
+}
+
+input {
+  border: blue;
+
 }
 
 .time-block{
@@ -71,10 +77,13 @@ textarea{
   transition: all .3s ease-in-out;
 }
 
-.container {
-  align-content: center;
-}
-
-.col {
-  
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
